# agnostics-framework

./: .gitignore  .gitmodules  README.md  dotenv.template  pyproject.toml
executors/: README.md
executors/c/: Dockerfile  build.sh
executors/c/tests/: test_executor.py
executors/c/workdir-template/: test_harness.py
executors/cpp/: Dockerfile  build.sh  test_generations.py
executors/cpp/tests/: test_executor.py
executors/cpp/workdir-template/: test_harness.py
executors/fortran/: Dockerfile  build.sh  in
executors/fortran/workdir-template/: test_harness.py
executors/java/: Dockerfile  build.sh
executors/java/workdir-template/: test_harness.py
executors/julia/: Dockerfile  build.sh
executors/julia/workdir-template/: test_harness.py
executors/lua/: Dockerfile  build.sh
executors/ocaml/: Dockerfile  build.sh
executors/python/: Dockerfile  build.sh
executors/r/: Dockerfile  build.sh
executors/rust/: Dockerfile  build.sh
pl-configs/: fortran.yaml  julia.yaml  lua.yaml  ocaml.yaml  r.yaml
prl_ml/prl_datasets/: pyproject.toml
prl_ml/prl_datasets/src/prl_datasets/: __init__.py  dataset_spec.py
prl_ml/prl_ml/: .gitignore  pyproject.toml  pyrightconfig.json
prl_ml/prl_ml/prl_ml/: optimizers.py  schedulers.py  util.py
prl_ml/prl_ml/prl_ml/grpo/: evaluator.py  gsm8k.py  logger.py  output_generator.py  ray_trainer.py  test_vanilla_grpo_trainer.py  types.py  util.py  vanilla_grpo_trainer.py
prl_ml/prl_ml/prl_ml/train/: util.py  weight_decay.py
scripts/: activate  activate.fish  agnostics_pass1_tsv.py  analysis_api_livecodebenchx.sh  analysis_grpo_codeforces_cots.sh  analysis_grpo_livecodebenchx.sh  analysis_model_livecodebenchx.sh  codeforces_cots_c.sh  codeforces_cots_cpp.sh  codeforces_cots_fortran.sh  codeforces_cots_java.sh  codeforces_cots_julia.sh  codeforces_cots_lua.sh  codeforces_cots_ocaml.sh  codeforces_cots_preprocess_checker_interactor.sh  codeforces_cots_python.sh  codeforces_cots_r.sh  codeforces_cots_rust.sh  codeforces_cots_splits.sh  codeforces_cots_test_split.sh  codeforces_cots_train_split.sh  codeforces_cots_validation_split.sh  gen_pl_code.sh  grpo.sh  grpo_mbpp.sh  lcb_py.sh  mbpp.sh  python  test_executors.sh  upload_model.sh  util_llm_cost.py
src/agnostics/cli/: grpo.py  (+5 more)
src/dockerinator/: __init__.py  agnostics.py  agnostics_cfg.py  agnostics_ray_shim.py  agnostics_resolve_container_tool_command.py  async_utils.py  docker_utils.py  run_in_containers.py  simple_run_in_containers.py  simple_supervisor.py
(+60 files in other folders)
